scrollbar fix

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -262,6 +262,18 @@ body {
 .f-list-item:last-of-type {
   margin-right: 0;
 }
+::-webkit-scrollbar {
+  width: 9px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rbga(0,0,0,0.2);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rbga(0,0,0,0.5);
+}
 
 .f-list-item:hover {
   border-bottom: 1px solid white;
